fix: toolbar right scroll button misalignment

--- a/src/content/index.module.css
+++ b/src/content/index.module.css
@@ -25,6 +25,7 @@
     transform: translateY(50px);
     transition: opacity 250ms ease, transform 250ms ease, display 250ms ease allow-discrete;
     overflow-x: hidden;
+    width: 485px;
 
     &.visible {
         display: block;
@@ -43,7 +44,6 @@
     padding: 4px;
     gap: 2px;
     align-items: center;
-    width: 485px;
 }
 
 .toolbar .top-bar {
@@ -141,6 +141,7 @@
     gap: 6px;
     line-height: 0;
     border-width: 0px !important;
+    background-image: none;
 }
 
 .toolbar .rephrase-bar .btn,
@@ -200,7 +201,6 @@
     font-size: 12px;
     color: #1f2021;
     margin: 0;
-    max-width: 500px;
     margin-bottom: 6px;
     line-height: 1.6;
 }
